--- a/templates/base.layout.tmpl
+++ b/templates/base.layout.tmpl
@@ -16,9 +16,24 @@
 </style>
 
 <body>
+
+    <header>
+        <h1>Track Space</h1>
+        <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+    </header>
+
+    <main>
+    </main>
+
+
     {{ block "content" . }} {{end}}
 
 
 </body>
 
-</html> { { end } }
+</html> {{ end }}
